--- a/ImageMap4/MapList.xaml
+++ b/ImageMap4/MapList.xaml
@@ -35,7 +35,7 @@
                                 <Style.Triggers>
                                     <MultiDataTrigger>
                                         <MultiDataTrigger.Conditions>
-                                            <Condition Binding="{Binding Data.IsEmpty}"
+                                            <Condition Binding="{Binding Item.Data.IsEmpty}"
                                                        Value="True" />
                                             <Condition Binding="{Binding DataContext.ShowEmptyMaps, RelativeSource={RelativeSource AncestorType=Window}}"
                                                        Value="False" />
@@ -43,14 +43,8 @@
                                         <Setter Property="Visibility"
                                                 Value="Collapsed" />
                                     </MultiDataTrigger>
-                                    <DataTrigger Value="True">
-                                        <DataTrigger.Binding>
-                                            <MultiBinding Converter="{StaticResource ContainsConverter}">
-                                                <Binding Path="SelectedMaps"
-                                                         ElementName="This" />
-                                                <Binding />
-                                            </MultiBinding>
-                                        </DataTrigger.Binding>
+                                    <DataTrigger Value="True"
+                                                 Binding="{Binding IsSelected}">
                                         <Setter Property="Background"
                                                 Value="#68b3ff" />
                                     </DataTrigger>
@@ -69,19 +63,19 @@
                                 <Image.Style>
                                     <Style TargetType="Image">
                                         <Setter Property="Source"
-                                                Value="{Binding Data.ImageSource}" />
+                                                Value="{Binding Item.Data.ImageSource}" />
                                         <Style.Triggers>
                                             <Trigger Property="IsMouseOver"
                                                      Value="True">
                                                 <Setter Property="Source"
-                                                        Value="{Binding Data.OriginalSource}" />
+                                                        Value="{Binding Item.Data.OriginalSource}" />
                                             </Trigger>
                                         </Style.Triggers>
                                     </Style>
                                 </Image.Style>
                             </Image>
                         </Grid>
-                        <TextBlock Text="{Binding ID, StringFormat=map_{0}}"
+                        <TextBlock Text="{Binding Item.ID, StringFormat=map_{0}}"
                                    Foreground="Black"
                                    FontWeight="Medium"
                                    FontSize="13"
