--- a/ImageMap4/StructureWindow.xaml
+++ b/ImageMap4/StructureWindow.xaml
@@ -9,7 +9,7 @@
         mc:Ignorable="d"
         Title="Create Structure"
         Height="450"
-        Width="800"
+        Width="940"
         FontSize="16"
         WindowStartupLocation="CenterOwner">
     <Window.DataContext>
@@ -32,7 +32,8 @@
                 <RowDefinition />
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-            <local:SquareGrid Grid.Row="0"
+            <local:SquareGrid x:Name="StructureGrid"
+                              Grid.Row="0"
                               Background="LightGray"
                               Rows="{Binding GridHeight}"
                               Columns="{Binding GridWidth}">
@@ -71,15 +72,8 @@
                 </StackPanel>
             </StackPanel>
         </Grid>
-        <ScrollViewer Grid.Column="1">
-            <ItemsControl ItemsSource="{Binding Parent.ExistingMaps}"
-                          ItemTemplate="{StaticResource MapCard}">
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <WrapPanel />
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-            </ItemsControl>
-        </ScrollViewer>
+        <local:MapList Grid.Column="1"
+                       Maps="{Binding Parent.ExistingMaps}" />
+
     </Grid>
 </Window>
