--- a/ImageMap4/MapList.xaml
+++ b/ImageMap4/MapList.xaml
@@ -51,30 +51,10 @@
                                 </Style.Triggers>
                             </Style>
                         </StackPanel.Style>
-                        <Grid>
-                            <Image Source="{StaticResource MapBackground}"
-                                   RenderOptions.BitmapScalingMode="NearestNeighbor"
-                                   Width="128"
-                                   Height="128"
-                                   Margin="1" />
-                            <Image RenderOptions.BitmapScalingMode="NearestNeighbor"
-                                   Stretch="None"
-                                   Margin="4">
-                                <Image.Style>
-                                    <Style TargetType="Image">
-                                        <Setter Property="Source"
-                                                Value="{Binding Item.Data.ImageSource}" />
-                                        <Style.Triggers>
-                                            <Trigger Property="IsMouseOver"
-                                                     Value="True">
-                                                <Setter Property="Source"
-                                                        Value="{Binding Item.Data.OriginalSource}" />
-                                            </Trigger>
-                                        </Style.Triggers>
-                                    </Style>
-                                </Image.Style>
-                            </Image>
-                        </Grid>
+                        <local:MapPreview DataContext="{Binding Item.Data}"
+                                          Width="128"
+                                          Height="128"
+                                          Margin="4" />
                         <TextBlock Text="{Binding Item.ID, StringFormat=map_{0}}"
                                    Foreground="Black"
                                    FontWeight="Medium"
