--- a/ImageMap4/ImportWindow.xaml
+++ b/ImageMap4/ImportWindow.xaml
@@ -6,8 +6,9 @@
         xmlns:local="clr-namespace:ImageMap4"
         xmlns:tk="http://schemas.xceed.com/wpf/xaml/toolkit"
         xmlns:sys="clr-namespace:System;assembly=netstandard"
+        xmlns:wpftk="clr-namespace:WpfToolkit.Controls;assembly=VirtualizingWrapPanel"
         mc:Ignorable="d"
-        Title="Import"
+        Title="{Binding CurrentImage.Source.Name, StringFormat=Import – {0}}"
         Height="640"
         Width="500"
         FontSize="16"
@@ -86,21 +87,24 @@
                           Rows="{Binding GridHeight}"
                           Columns="{Binding GridWidth}">
             <local:SquareGrid.Inside>
-                <Image Grid.Row="1"
-                       Grid.Column="1"
-                       Source="{Binding CurrentImage.Source.Source.Value}"
-                       Stretch="{Binding StretchChoice.Stretch}"
-                       VerticalAlignment="Center"
-                       HorizontalAlignment="Center"
-                       RenderOptions.BitmapScalingMode="{Binding ScaleChoice.Mode}">
-                    <Image.LayoutTransform>
-                        <TransformGroup>
-                            <RotateTransform Angle="{Binding CurrentImage.Rotation}" />
-                            <ScaleTransform ScaleX="{Binding CurrentImage.ScaleX}" />
-                            <ScaleTransform ScaleY="{Binding CurrentImage.ScaleY}" />
-                        </TransformGroup>
-                    </Image.LayoutTransform>
-                </Image>
+                <Grid>
+                    <Image Source="{StaticResource MapBackground}"
+                           RenderOptions.BitmapScalingMode="NearestNeighbor" />
+                    <Rectangle Fill="{Binding BackgroundColorChoice.Brush}" />
+                    <Image Source="{Binding CurrentImage.Source.Source.Value}"
+                           Stretch="{Binding StretchChoice.Stretch}"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Center"
+                           RenderOptions.BitmapScalingMode="{Binding ScaleChoice.Mode}">
+                        <Image.LayoutTransform>
+                            <TransformGroup>
+                                <RotateTransform Angle="{Binding CurrentImage.Rotation}" />
+                                <ScaleTransform ScaleX="{Binding CurrentImage.ScaleX}" />
+                                <ScaleTransform ScaleY="{Binding CurrentImage.ScaleY}" />
+                            </TransformGroup>
+                        </Image.LayoutTransform>
+                    </Image>
+                </Grid>
             </local:SquareGrid.Inside>
         </local:SquareGrid>
         <StackPanel Grid.Row="1">
@@ -147,6 +151,17 @@
                             <RotateTransform Angle="-90" />
                         </Path.LayoutTransform>
                     </Path>
+                </Button>
+                <Button Margin="10,0,0,0"
+                        Height="40"
+                        Width="40"
+                        Command="{Binding ChangeBackgroundCommand}">
+                    <Border BorderThickness="1"
+                            BorderBrush="Black">
+                        <Rectangle Height="20"
+                                   Width="20"
+                                   Fill="{Binding BackgroundColorChoice.Brush}" />
+                    </Border>
                 </Button>
             </StackPanel>
             <StackPanel Orientation="Horizontal"
@@ -235,68 +250,67 @@
                         Command="{Binding DiscardAllCommand}"
                         Style="{StaticResource VisibleWhenMultiple}" />
             </StackPanel>
-            <ScrollViewer VerticalScrollBarVisibility="Hidden"
-                          HorizontalScrollBarVisibility="Auto"
-                          Background="DarkGray"
-                          Style="{StaticResource VisibleWhenMultiple}">
-                <ItemsControl x:Name="NavigationBar"
-                              ItemsSource="{Binding ImageQueue}">
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <Border BorderBrush="LightGreen"
-                                    Margin="10,10,0,10">
-                                <Border.InputBindings>
-                                    <MouseBinding Gesture="LeftClick"
-                                                  Command="{Binding DataContext.SwitchImageCommand, RelativeSource={RelativeSource AncestorType=Window}}"
-                                                  CommandParameter="{Binding}" />
-                                </Border.InputBindings>
-                                <Border.Style>
-                                    <Style TargetType="Border">
-                                        <Setter Property="BorderThickness"
-                                                Value="4" />
-                                        <Style.Triggers>
-                                            <DataTrigger Value="False">
-                                                <DataTrigger.Binding>
-                                                    <MultiBinding Converter="{StaticResource EqualityConverter}">
-                                                        <Binding Path="DataContext.CurrentImage"
-                                                                 RelativeSource="{RelativeSource AncestorType=Window}" />
-                                                        <Binding />
-                                                    </MultiBinding>
-                                                </DataTrigger.Binding>
-                                                <DataTrigger.Setters>
-                                                    <Setter Property="BorderThickness"
-                                                            Value="0" />
-                                                </DataTrigger.Setters>
-                                            </DataTrigger>
-                                        </Style.Triggers>
-                                    </Style>
-                                </Border.Style>
-                                <Border BorderBrush="Black"
-                                        BorderThickness="2"
-                                        Background="LightGray"
-                                        Height="64"
-                                        Width="64">
-                                    <Image Source="{Binding Source.Source.Value}"
-                                           RenderOptions.BitmapScalingMode="HighQuality">
-                                        <Image.LayoutTransform>
-                                            <TransformGroup>
-                                                <RotateTransform Angle="{Binding Rotation}" />
-                                                <ScaleTransform ScaleX="{Binding ScaleX}" />
-                                                <ScaleTransform ScaleY="{Binding ScaleY}" />
-                                            </TransformGroup>
-                                        </Image.LayoutTransform>
-                                    </Image>
-                                </Border>
+            <wpftk:VirtualizingItemsControl x:Name="NavigationBar"
+                                            ItemsSource="{Binding ImageQueue}"
+                                            ScrollViewer.VerticalScrollBarVisibility="Hidden"
+                                            ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                                            Background="DarkGray"
+                                            Style="{StaticResource VisibleWhenMultiple}">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Border BorderBrush="LightGreen"
+                                Margin="10,10,0,10">
+                            <Border.InputBindings>
+                                <MouseBinding Gesture="LeftClick"
+                                              Command="{Binding DataContext.SwitchImageCommand, RelativeSource={RelativeSource AncestorType=Window}}"
+                                              CommandParameter="{Binding}" />
+                            </Border.InputBindings>
+                            <Border.Style>
+                                <Style TargetType="Border">
+                                    <Setter Property="BorderThickness"
+                                            Value="4" />
+                                    <Style.Triggers>
+                                        <DataTrigger Value="False">
+                                            <DataTrigger.Binding>
+                                                <MultiBinding Converter="{StaticResource EqualityConverter}">
+                                                    <Binding Path="DataContext.CurrentImage"
+                                                             RelativeSource="{RelativeSource AncestorType=Window}" />
+                                                    <Binding />
+                                                </MultiBinding>
+                                            </DataTrigger.Binding>
+                                            <DataTrigger.Setters>
+                                                <Setter Property="BorderThickness"
+                                                        Value="0" />
+                                            </DataTrigger.Setters>
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Border.Style>
+                            <Border BorderBrush="Black"
+                                    BorderThickness="2"
+                                    Background="LightGray"
+                                    Height="64"
+                                    Width="64">
+                                <Image Source="{Binding Source.Source.Value}"
+                                       RenderOptions.BitmapScalingMode="HighQuality">
+                                    <Image.LayoutTransform>
+                                        <TransformGroup>
+                                            <RotateTransform Angle="{Binding Rotation}" />
+                                            <ScaleTransform ScaleX="{Binding ScaleX}" />
+                                            <ScaleTransform ScaleY="{Binding ScaleY}" />
+                                        </TransformGroup>
+                                    </Image.LayoutTransform>
+                                </Image>
                             </Border>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <StackPanel Orientation="Horizontal" />
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                </ItemsControl>
-            </ScrollViewer>
+                        </Border>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <VirtualizingStackPanel Orientation="Horizontal" />
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+            </wpftk:VirtualizingItemsControl>
         </StackPanel>
     </Grid>
 </Window>
