--- a/ImageMap4/Shared.xaml
+++ b/ImageMap4/Shared.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:ImageMap4">
     <local:EqualityConverter x:Key="EqualityConverter" />
+    <local:GreaterThanConverter x:Key="GreaterThanConverter" />
     <BitmapImage x:Key="MapBackground"
                  UriSource="../Icons/item_frame.png" />
 </ResourceDictionary>
