Fix a lot of warnings

--- a/ImageMap4/Controls/MapPreview.xaml
+++ b/ImageMap4/Controls/MapPreview.xaml
@@ -10,7 +10,7 @@
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Shared.xaml" />
+                <ResourceDictionary Source="../Shared.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
