--- a/ImageMap4/Controls/MapList.xaml
+++ b/ImageMap4/Controls/MapList.xaml
@@ -20,7 +20,7 @@
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Shared.xaml" />
+                <ResourceDictionary Source="../Shared.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
