--- a/ImageMap4/MainWindow.xaml
+++ b/ImageMap4/MainWindow.xaml
@@ -58,11 +58,15 @@
                                                    Foreground="Black"
                                                    FontWeight="Medium"
                                                    FontSize="17"
-                                                   Margin="4,2,0,0" />
+                                                   Margin="4,0,0,0" />
                                         <TextBlock Text="{Binding FolderName}"
                                                    Foreground="Gray"
-                                                   FontSize="15"
-                                                   Margin="4,2,0,0" />
+                                                   FontSize="13"
+                                                   Margin="4,0,0,0" />
+                                        <TextBlock Text="{Binding Version.Name, StringFormat={}{0}+}"
+                                                   Foreground="Gray"
+                                                   FontSize="13"
+                                                   Margin="4,0,0,0" />
                                     </StackPanel>
                                 </StackPanel>
                             </Border>
@@ -78,7 +82,7 @@
                 <Setter.Value>
                     <MultiBinding StringFormat="Image Map – {0} ({1}+)">
                         <Binding Path="SelectedWorld.Name" />
-                        <Binding Path="SelectedWorld.Version.Value.Name" />
+                        <Binding Path="SelectedWorld.Version.Name" />
                     </MultiBinding>
                 </Setter.Value>
             </Setter>
