Big structure import prep

--- a/ImageMap4/Controls/MapPreview.xaml
+++ b/ImageMap4/Controls/MapPreview.xaml
@@ -15,7 +15,7 @@
         </ResourceDictionary>
     </UserControl.Resources>
     <Grid>
-        <Image Source="{StaticResource MapBackground}"
+        <Image Source="{StaticResource ItemFrame}"
                RenderOptions.BitmapScalingMode="NearestNeighbor" />
         <Image RenderOptions.BitmapScalingMode="NearestNeighbor">
             <Image.Style>
