--- a/ImageMap4/Shared.xaml
+++ b/ImageMap4/Shared.xaml
@@ -3,6 +3,8 @@
                     xmlns:local="clr-namespace:ImageMap4">
     <local:EqualityConverter x:Key="EqualityConverter" />
     <local:GreaterThanConverter x:Key="GreaterThanConverter" />
-    <BitmapImage x:Key="MapBackground"
+    <BitmapImage x:Key="ItemFrame"
                  UriSource="../Icons/item_frame.png" />
+    <BitmapImage x:Key="GlowItemFrame"
+                 UriSource="../Icons/glow_item_frame.png" />
 </ResourceDictionary>
