--- a/ImageMap4/StructureWindow.xaml
+++ b/ImageMap4/StructureWindow.xaml
@@ -12,9 +12,6 @@
         Width="940"
         FontSize="16"
         WindowStartupLocation="CenterOwner">
-    <Window.DataContext>
-        <local:StructureViewModel />
-    </Window.DataContext>
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -60,10 +57,40 @@
                     </StackPanel>
                 </StackPanel>
                 <StackPanel HorizontalAlignment="Center"
+                            Orientation="Horizontal"
+                            Margin="0,0,0,5">
+                    <CheckBox Content="Glowing"
+                              IsChecked="{Binding GlowingFrames}"
+                              VerticalContentAlignment="Center"
+                              HorizontalAlignment="Right" />
+                    <CheckBox Content="Invisible"
+                              Margin="10,0,0,0"
+                              IsChecked="{Binding InvisibleFrames}"
+                              VerticalContentAlignment="Center"
+                              HorizontalAlignment="Right">
+                        <CheckBox.Style>
+                            <Style TargetType="CheckBox">
+                                <Setter Property="Visibility"
+                                        Value="Collapsed" />
+                                <Style.Triggers>
+                                    <DataTrigger Value="True"
+                                                 Binding="{Binding JavaMode}">
+                                        <DataTrigger.Setters>
+                                            <Setter Property="Visibility"
+                                                    Value="Visible" />
+                                        </DataTrigger.Setters>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </CheckBox.Style>
+                    </CheckBox>
+                </StackPanel>
+                <StackPanel HorizontalAlignment="Center"
                             Margin="0,0,0,5">
                     <TextBlock Text="Add to inventory:" />
                     <ComboBox Width="200"
                               ItemsSource="{Binding Parent.PlayerList}"
+                              SelectedItem="{Binding SelectedInventory}"
                               DisplayMemberPath="Name" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal"
