--- a/ImageMap4/Controls/MapList.xaml
+++ b/ImageMap4/Controls/MapList.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ImageMap4.MapList"
+<UserControl x:Class="ImageMap4.MapList"
              x:Name="This"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -27,13 +27,14 @@
     <wpftk:VirtualizingItemsControl ItemsSource="{Binding}">
         <ItemsControl.ItemsPanel>
             <ItemsPanelTemplate>
-                <wpftk:VirtualizingWrapPanel />
+                <wpftk:VirtualizingWrapPanel MouseWheelDeltaItem="1" />
             </ItemsPanelTemplate>
         </ItemsControl.ItemsPanel>
         <ItemsControl.ItemTemplate>
             <DataTemplate>
                 <StackPanel Margin="3"
-                            MouseDown="Map_MouseDown">
+                            MouseDown="Map_MouseDown"
+                            ContextMenu="{Binding MapMenu, ElementName=This}">
                     <StackPanel.Style>
                         <Style TargetType="StackPanel">
                             <Setter Property="Visibility"
