--- a/ImageMap4/Controls/MapPreview.xaml
+++ b/ImageMap4/Controls/MapPreview.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:ImageMap4"
              mc:Ignorable="d"
+             d:DataContext="{d:DesignInstance Type=local:Map}"
              d:DesignHeight="450"
              d:DesignWidth="450">
     <UserControl.Resources>
